--- a/rough-work/test.ipynb
+++ b/rough-work/test.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hello'"
+       "{'e', 'h', 'l', 'o'}"
       ]
      },
      "execution_count": 2,
@@ -25,8 +25,87 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "s.capitalize()"
+    "max(set(s), key=s.count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-11"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [-2,-3,1,6,-11,8]\n",
+    "max(l, key=abs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, -2, -3, 6, 8, -11]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(l, key=abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 6, 1, -2, -3, -11]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(l, reverse=True)"
    ]
   },
   {
@@ -39,10 +118,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0e726030cc90977e137758793a93acc2cb24059701a4f7b03359ca9f8e86bd34"
+   "hash": "a35259ccf8433e393415b3c9f53e872284b7d043c571e8e3abdf0c78c738a79a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit (windows store)",
+   "display_name": "Python 3.9.4 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -56,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.4"
   },
   "orig_nbformat": 4
  },
